--- a/task-manager-app/composer.json
+++ b/task-manager-app/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "^3.1",
-        "realrashid/sweet-alert": "^7.2"
+        "realrashid/sweet-alert": "^7.2",
+        "stripe/stripe-php": "^16.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
